# ChangeLog for app-misc/weatherspect
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Jul 2011; James Rowe <jnrowe@gmail.com> weatherspect-1.9.ebuild:
  Keyworded amd64.

*weatherspect-1.9 (07 Jun 2011)

  07 Jun 2011; James Rowe <jnrowe@gmail.com> +weatherspect-1.9.ebuild:
  Version bump [373].

  12 Jan 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added watch file for package updates.

  08 May 2010; James Rowe <jnrowe@gmail.com> weatherspect-1.8.ebuild:
  Fixed missing dependencies.

  12 Feb 2010; James Rowe <jnrowe@gmail.com> weatherspect-1.8.ebuild:
  Keyworded x86.

  12 Feb 2010; James Rowe <jnrowe@gmail.com> weatherspect-1.8.ebuild:
  Keyworded amd64.

*weatherspect-1.8 (13 Jan 2010)

  13 Jan 2010; James Rowe <jnrowe@gmail.com> +weatherspect-1.8.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
