@@ -1,17 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA512
 
-DIST weatherspect-1.8.tar.gz 32733 RMD160 36cc233dcf5726c3c8b2c6c0a80cc7a3ce835334 SHA1 020306ee37d590887470f4a7dea8f0d0e1190431 SHA256 7a9f36e7c6e5f933a7ef06e2fb561a371a6a4c843494e051c822c98e49762e65
 DIST weatherspect-1.9.tar.gz 33298 RMD160 22f2996578eb5a86006ff6c2e8f4b13563ba762f SHA1 5c5db2195290045670ad6cb933eeb96f4913b15f SHA256 765052ae754877c803da597544e4758e6a5dd1344ebf18dbd452809567cd2828
-EBUILD weatherspect-1.8.ebuild 610 RMD160 ad46b5eced7a47ea4afd631f27327600336192cb SHA1 2c2d6e7c5cb6da8f5082e1de49c662ff60a0a926 SHA256 221f350bf4b614cf37469192c786e42e0b29ac544a5a03da2afe85e74a0ca267
-EBUILD weatherspect-1.9.ebuild 737 RMD160 b3ef24bc2ae9387195f1b583bab66cb53f04403a SHA1 9c97a94828f451c570039bd64ac3311d9f95dc8a SHA256 476bd7ddbf2682c61b8fefd42b350d8e6bac56e9d3de51728e49bd50270b4c7e
-MISC ChangeLog 859 RMD160 fa09d2b0830dce52caa50e3398b99f4e77b4dc95 SHA1 56fb84fd707a3b7a318491a652cc9a9ac72505ac SHA256 7f87e1652d9ecdf8248cddf4a2ba4011cc72d8c5e58e4c9620a384ff3ea119d6
+EBUILD weatherspect-1.9.ebuild 736 RMD160 94b8b25d7452ed9792ac19c1537df8d5c80b902e SHA1 12aedbe4da4d8ce4820900bcbc2fe046a31ffe62 SHA256 51fb90419dfc179f04e0cc5e549dfc5dd31f84903d915cb9c3038c1cb18ddbfc
+MISC ChangeLog 975 RMD160 4460824d5bf233570030f266d9d340368fdeb655 SHA1 a8b80b6e33e5e524150f1d30bc4867d5acd1ada7 SHA256 f4c54db825e45730cc50ff7e536cd6885eb919999b2b7f1985e337ddf3a4792a
 MISC metadata.xml 629 RMD160 63c0033131b8a7cb2d026052a3651ff71fb36e10 SHA1 c5931fd868c2be48131bdc9ca0910734c844f951 SHA256 1e4e2849161ade7ce055d2a672c8333ded072a4f833b7461bdaf58f608900e25
 MISC watch 123 RMD160 dbbacc3d7fafbca1bf1aa3d66008dc8a84731e24 SHA1 ca93f336e12760fc1df133098873355fe5ae721f SHA256 01f19605c4180ee4f5da025375be6e60a0d29062d8bd4264a43cf5fb70d7d886
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk4VjroACgkQzJrj3cAXR0k5ngCglyLuEs4sEpGO94lpwKZDergr
-T+wAn2G0FF2/ewQPG6xeDlBGJRa5Kfh4
-=EMZn
+iEYEAREKAAYFAk4Vs2UACgkQzJrj3cAXR0knUwCfZQ9JouD7h315FiF32I3sziIl
+djIAoKjzBBdNiaR7pbiWoHSEUki43R5F
+=Kq7k
 -----END PGP SIGNATURE-----
