@@ -11,7 +11,7 @@ SRC_URI="http://www.robobunny.com/projects/weatherspect/weatherspect.tar.gz
 
 LICENSE="Artistic"
 SLOT="0"
-KEYWORDS="amd64 ~x86"
+KEYWORDS="amd64 x86"
 IUSE=""
 
 DEPEND=""
