@@ -88,6 +88,5 @@
  * Licence: ``Artistic``
  * Versions:
 
-  * `1.8 <https://github.com/JNRowe/misc-overlay/blob/master/app-misc/weatherspect/weatherspect-1.8.ebuild>`__  ``amd64``, ``x86``
-  * `1.9 <https://github.com/JNRowe/misc-overlay/blob/master/app-misc/weatherspect/weatherspect-1.9.ebuild>`__  ``amd64``, ``~x86`` (due 2011-07-07)
+  * `1.9 <https://github.com/JNRowe/misc-overlay/blob/master/app-misc/weatherspect/weatherspect-1.9.ebuild>`__  ``amd64``, ``x86``
 
