@@ -1,22 +1,0 @@
-
-dev-perl/Term-Animation dev-perl/Weather-Underground
-0
-http://www.robobunny.com/projects/weatherspect/weatherspect.tar.gz -> weatherspect-1.8.tar.gz
-
-http://www.robobunny.com/projects/weatherspect/html/
-GPL-2
-Create an ASCII animation that simulates the weather
-amd64 x86
-
-
-
-
-
-2
-
-install
-
-
-
-
-
