@@ -6,7 +6,7 @@ http://www.robobunny.com/projects/weatherspect/weatherspect.tar.gz -> weatherspe
 http://www.robobunny.com/projects/weatherspect/html/
 Artistic
 Create an ASCII animation that simulates the weather
-amd64 ~x86
+amd64 x86
 
 
 
